tools/playbooks/dependency_track/deploy.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"dependencytrack-postgres-s-sca"},"name":"dependencytrack-postgres-s-sca","namespace":"s-sca"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"dependencytrack-postgres-s-sca"}},"template":{"metadata":{"labels":{"app":"dependencytrack-postgres-s-sca"}},"spec":{"containers":[{"env":[{"name":"PGDATA","valueFrom":{"configMapKeyRef":{"key":"PGDATA","name":"dependencytrack-s-sca-configmap"}}},{"name [...]
    creationTimestamp: "2023-11-20T13:43:59Z"
    generation: 10
    labels:
      app: dependencytrack-postgres-s-sca
    name: dependencytrack-postgres-s-sca
    namespace: s-sca
    resourceVersion: "50165349"
    uid: 97ce44b2-a0b2-4994-be20-83d439fde027
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: dependencytrack-postgres-s-sca
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: dependencytrack-postgres-s-sca
      spec:
        containers:
        - env:
          - name: PGDATA
            valueFrom:
              configMapKeyRef:
                key: PGDATA
                name: dependencytrack-s-sca-configmap
          - name: POSTGRES_USER
            valueFrom:
              configMapKeyRef:
                key: POSTGRES_USER
                name: dependencytrack-s-sca-configmap
          - name: POSTGRES_DB
            valueFrom:
              configMapKeyRef:
                key: POSTGRES_DB
                name: dependencytrack-s-sca-configmap
          - name: POSTGRES_PASSWORD
            valueFrom:
              secretKeyRef:
                key: ALPINE_DATABASE_PASSWORD
                name: dependencytrack-s-sca-secrets
          image: postgres:11.22-bullseye
          imagePullPolicy: IfNotPresent
          name: postgres
          ports:
          - containerPort: 5432
            name: postgres
            protocol: TCP
          resources:
            limits:
              cpu: 400m
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 1536Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: dependencytrack-postgres-s-sca-pvc
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        tolerations:
        - effect: NoSchedule
          key: apps
          operator: Equal
          value: sectools
        volumes:
        - name: dependencytrack-postgres-s-sca-pvc
          persistentVolumeClaim:
            claimName: dependencytrack-postgres-s-sca-pvc
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-11-20T13:43:59Z"
      lastUpdateTime: "2023-11-22T10:48:34Z"
      message: ReplicaSet "dependencytrack-postgres-s-sca-675bc5b66f" has successfully
        progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-03-07T16:01:04Z"
      lastUpdateTime: "2024-03-07T16:01:04Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 10
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "4"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"dependencytrack-s-sca"},"name":"dependencytrack-s-sca","namespace":"s-sca"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"dependencytrack-s-sca"}},"template":{"metadata":{"labels":{"app":"dependencytrack-s-sca"}},"spec":{"containers":[{"env":[{"name":"ALPINE_DATABASE_MODE","valueFrom":{"configMapKeyRef":{"key":"ALPINE_DATABASE_MODE","name":"dependencytrack-s-sca-configmap"}}},{"name":"ALPIN [...]
    creationTimestamp: "2023-11-20T13:43:59Z"
    generation: 20
    labels:
      app: dependencytrack-s-sca
    name: dependencytrack-s-sca
    namespace: s-sca
    resourceVersion: "50165463"
    uid: d6ff9a46-00dc-42d4-925a-463f1bbfefa8
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: dependencytrack-s-sca
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: dependencytrack-s-sca
      spec:
        containers:
        - env:
          - name: ALPINE_DATABASE_MODE
            valueFrom:
              configMapKeyRef:
                key: ALPINE_DATABASE_MODE
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_DATABASE_URL
            valueFrom:
              configMapKeyRef:
                key: ALPINE_DATABASE_URL
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_DATABASE_DRIVER
            valueFrom:
              configMapKeyRef:
                key: ALPINE_DATABASE_DRIVER
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_DATABASE_DRIVER_PATH
            valueFrom:
              configMapKeyRef:
                key: ALPINE_DATABASE_DRIVER_PATH
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_DATABASE_USERNAME
            valueFrom:
              configMapKeyRef:
                key: ALPINE_DATABASE_USERNAME
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_DATABASE_POOL_ENABLED
            valueFrom:
              configMapKeyRef:
                key: ALPINE_DATABASE_POOL_ENABLED
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_DATABASE_POOL_MAX_SIZE
            valueFrom:
              configMapKeyRef:
                key: ALPINE_DATABASE_POOL_MAX_SIZE
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_DATABASE_POOL_IDLE_TIMEOUT
            valueFrom:
              configMapKeyRef:
                key: ALPINE_DATABASE_POOL_IDLE_TIMEOUT
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_DATABASE_POOL_MAX_LIFETIME
            valueFrom:
              configMapKeyRef:
                key: ALPINE_DATABASE_POOL_MAX_LIFETIME
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_OIDC_ENABLED
            valueFrom:
              configMapKeyRef:
                key: ALPINE_OIDC_ENABLED
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_OIDC_CLIENT_ID
            valueFrom:
              configMapKeyRef:
                key: ALPINE_OIDC_CLIENT_ID
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_OIDC_ISSUER
            valueFrom:
              configMapKeyRef:
                key: ALPINE_OIDC_ISSUER
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_OIDC_USERNAME_CLAIM
            valueFrom:
              configMapKeyRef:
                key: ALPINE_OIDC_USERNAME_CLAIM
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_OIDC_TEAMS_CLAIM
            valueFrom:
              configMapKeyRef:
                key: ALPINE_OIDC_TEAMS_CLAIM
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_OIDC_USER_PROVISIONING
            valueFrom:
              configMapKeyRef:
                key: ALPINE_OIDC_USER_PROVISIONING
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_OIDC_TEAM_SYNCHRONIZATION
            valueFrom:
              configMapKeyRef:
                key: ALPINE_OIDC_TEAM_SYNCHRONIZATION
                name: dependencytrack-s-sca-configmap
          - name: ALPINE_DATABASE_PASSWORD
            valueFrom:
              secretKeyRef:
                key: ALPINE_DATABASE_PASSWORD
                name: dependencytrack-s-sca-secrets
          image: dependencytrack/apiserver:latest
          imagePullPolicy: IfNotPresent
          name: dependencytrack-s-sca
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          resources:
            limits:
              cpu: "4"
              memory: 6Gi
            requests:
              cpu: "2"
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data
            name: dependencytrack-pvc
          - mountPath: /tmp
            name: tmp
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
        terminationGracePeriodSeconds: 30
        tolerations:
        - effect: NoSchedule
          key: apps
          operator: Equal
          value: sectools
        volumes:
        - name: dependencytrack-pvc
          persistentVolumeClaim:
            claimName: dependencytrack-s-sca-pvc
        - emptyDir: {}
          name: tmp
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-11-20T13:43:59Z"
      lastUpdateTime: "2024-03-07T15:56:05Z"
      message: ReplicaSet "dependencytrack-s-sca-85df4bbb84" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-03-07T16:01:25Z"
      lastUpdateTime: "2024-03-07T16:01:25Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 20
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"dependencytrackfront-s-sca"},"name":"dependencytrackfront-s-sca","namespace":"s-sca"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"dependencytrackfront-s-sca"}},"template":{"metadata":{"labels":{"app":"dependencytrackfront-s-sca"}},"spec":{"containers":[{"env":[{"name":"API_BASE_URL","valueFrom":{"configMapKeyRef":{"key":"API_BASE_URL","name":"dependencytrack-s-sca-configmap"}}},{"name":"O [...]
    creationTimestamp: "2023-11-20T13:43:59Z"
    generation: 13
    labels:
      app: dependencytrackfront-s-sca
    name: dependencytrackfront-s-sca
    namespace: s-sca
    resourceVersion: "46202867"
    uid: 17dfc5ee-841d-40df-b847-dcd54eec07fb
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: dependencytrackfront-s-sca
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: dependencytrackfront-s-sca
      spec:
        containers:
        - env:
          - name: API_BASE_URL
            valueFrom:
              configMapKeyRef:
                key: API_BASE_URL
                name: dependencytrack-s-sca-configmap
          - name: OIDC_ISSUER
            valueFrom:
              configMapKeyRef:
                key: ALPINE_OIDC_ISSUER
                name: dependencytrack-s-sca-configmap
          - name: OIDC_CLIENT_ID
            valueFrom:
              configMapKeyRef:
                key: ALPINE_OIDC_CLIENT_ID
                name: dependencytrack-s-sca-configmap
          - name: OIDC_LOGIN_BUTTON_TEXT
            valueFrom:
              configMapKeyRef:
                key: OIDC_LOGIN_BUTTON_TEXT
                name: dependencytrack-s-sca-configmap
          - name: OIDC_SCOPE
            valueFrom:
              configMapKeyRef:
                key: OIDC_SCOPE
                name: dependencytrack-s-sca-configmap
          - name: OIDC_FLOW
            valueFrom:
              configMapKeyRef:
                key: OIDC_FLOW
                name: dependencytrack-s-sca-configmap
          image: dependencytrack/frontend:latest
          imagePullPolicy: IfNotPresent
          name: dependencytrackfront-s-sca
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        tolerations:
        - effect: NoSchedule
          key: apps
          operator: Equal
          value: sectools
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-11-20T13:43:59Z"
      lastUpdateTime: "2023-11-22T10:51:51Z"
      message: ReplicaSet "dependencytrackfront-s-sca-c67b65696" has successfully
        progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-02-27T14:15:47Z"
      lastUpdateTime: "2024-02-27T14:15:47Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 13
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
